--- a/src/main/resources/au/org/ala/cas/i18n/messages_fr.properties
+++ b/src/main/resources/au/org/ala/cas/i18n/messages_fr.properties
@@ -25,4 +25,4 @@ casLoginView.forgot_password=Oubli&#xE9;?
 casLoginView.remember_me=Rester connect&#xE9;(e)
 casLoginView.sign_up_now=S'inscrire maintenant
 casLoginView.dont_have_an_account=Vous n'avez pas de compte?
-bottom.license_note=Licence: <a href="https://creativecommons.org/licenses/by/3.0/au/">Creative Commons Attribution 3.0 Australia License</a>&ensp;<a rel="license" href="http://creativecommons.org/licenses/by/3.0/au/"><img alt="Creative Commons License" style="border-width:0" src="https://licensebuttons.net/l/by/3.0/80x15.png"></a>
+bottom.license_note=License: <a href="https://creativecommons.org/licenses/by/3.0/au/">Creative Commons Attribution 3.0 Australia License</a>&ensp;<a rel="license" href="http://creativecommons.org/licenses/by/3.0/au/"><img alt="Creative Commons License" style="border-width:0" src="https://licensebuttons.net/l/by/3.0/80x15.png"></a>
